--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
     <div id="calculator">
         <p>0</p>
         <div class="line">
-           <button>Clear</button>
+           <button class="btn">Clear</button>
            <button class="wide">Backspace</button>
-           <button>/</button>
+           <button class="btn">/</button>
         </div>
         <div class="line">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>x</button>
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">x</button>
          </div>
          <div class="line">
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">-</button>
          </div>
          <div class="line">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
+            <button class="btn">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">+</button>
          </div>
          <div class="line">
             <button class="wide">0</button>
-            <button>.</button>
-            <button>=</button>
+            <button class="btn">.</button>
+            <button class="btn">=</button>
          </div>
     </div>
     
