revise Clear to C for better appearance on phone

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="calculator">
         <p>0</p>
         <div class="line">
-           <button class="btn">Clear</button>
+           <button class="btn">C</button>
            <button class="wide">Backspace</button>
            <button class="btn">/</button>
         </div>
